hard-gists/fe4fd5f27a4811cb0187/run.log
=== Docker Run Log for fe4fd5f27a4811cb0187 ===
Started at: Mi 29. Okt 21:44:08 CET 2025

[2025-10-29 21:44:09] START: Running container for fe4fd5f27a4811cb0187
[2025-10-29 21:44:09] SUCCESS: Container 9128a635397d57bdba16ff3324b88435843bf2f15c8914c724d8d92f3ec8016e started for fe4fd5f27a4811cb0187
=== Container logs for fe4fd5f27a4811cb0187 ===
  File "/snippet.py", line 9
    doubledollar = re.compile(ur"\$\$([^$]+)\$\$")
                                ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
=== End of logs for fe4fd5f27a4811cb0187 ===
[2025-10-29 21:44:11] INFO: Container 9128a635397d57bdba16ff3324b88435843bf2f15c8914c724d8d92f3ec8016e has stopped
